Fixed drop shadow overlap

--- a/src/ToolbarDropdown.scss
+++ b/src/ToolbarDropdown.scss
@@ -37,7 +37,7 @@
     transition: opacity var(--transition-length);
   }
   & > .drop-list {
-    z-index: -1;
+    z-index: -2;
     padding: 0.1rem 0.2rem;
     display: flex;
     flex-direction: column;
