--- a/src/containers/MainToolbar.scss
+++ b/src/containers/MainToolbar.scss
@@ -2,8 +2,15 @@
   display: flex;
   flex-direction: row;
   height: 4.8rem;
-  background-color: var(--toolbar-background);
   color: white;
+  &::before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: inherit;
+    background-color: var(--toolbar-background);
+    z-index: -1;
+  }
   & > span.title {
     font-size: 2rem;
     padding: .2rem 2rem;
